tests/fixtures/invalid/pow_str_int_float.py
# Cannot call pow() with Str, Int, Float
x = pow("hello", 1, 1.0)
